# photo_organizer

./: .gitignore  README.md  main.py  photo_organizer.py  pyproject.toml
config/: settings.py
src/core/: file_processor.py  file_scanner.py  organizer.py
src/metadata/: exif_reader.py  media_info.py
src/models/: file_record.py
src/utils/: file_utils.py  hash_utils.py  naming_utils.py  progress.py
