[project]
name = "photo-organizer"
version = "0.2.0"
description = "照片和视频整理工具 - 支持Live Photos配对、视频整理、EXIF读取"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "piexif>=1.1.3",
    "pymediainfo>=7.0.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
photo-organizer = "main:main"

[tool.setuptools]
packages = ["src", "config"]
